--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cgmath = "0.18.0"
 clap = { version = "4.4.7", features = ["derive"] }
+glium = "0.26.0"
 image = "0.24.7"
 kd-tree = { version = "0.5.1", features = ["rayon"] }
 nalgebra = "0.32.3"
