--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2021"
 [dependencies]
 cgmath = "0.18.0"
 clap = { version = "4.4.7", features = ["derive"] }
-glium = "0.32.0"
+glium = "0.34.0"
+glutin = "0.31.3"
+glutin-winit = "0.4.2"
 image = "0.24.7"
 kd-tree = { version = "0.5.1", features = ["rayon"] }
 nalgebra = "0.32.3"
 num_cpus = "1.16.0"
 rayon = "1.8.0"
 typenum = "1.17.0"
+winit = "0.29.0"
